Add GeoIP and language-based redirects for JP
This will send people straight to https://middlemanapp.com/jp/ if
they are location in Japan and/or have their browser language set
to Japanese.

Netlify Docs:
https://www.netlify.com/docs/redirects/#geoip-and-language-based-redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,10 @@
 [[redirects]]
+  from = "/*"
+  to = "/jp/:splat"
+  status = 302
+  conditions = {Language = ["ja"], Country = ["JP"]}
+
+[[redirects]]
   from = "/advanced/asset_pipeline"
   to = "/advanced/asset-pipeline"
   status = 301
