fixup! Add GeoIP and language-based redirects for JP

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   from = "/*"
   to = "/jp/:splat"
   status = 302
-  conditions = {Language = ["ja"], Country = ["JP"]}
+  conditions = {Language = ["ja"]}
 
 [[redirects]]
   from = "/advanced/asset_pipeline"
