Added site apps.inspira.io to the list.

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -371,6 +371,8 @@ built:
   - url: https://mikerogers.io/
     title: Mike Rogers - Ruby on Rails Developer
     source: https://github.com/MikeRogers0/MikeRogersIO
+  - url: https://apps.inspira.io
+    title: Inspira Apps
 
 mobile:
   - url: http://pollev.com
