--- a/data/sites.yml
+++ b/data/sites.yml
@@ -571,3 +571,5 @@ blogs:
   - url: https://cameronbroe.com
     title: Cameron Roe - Software engineer from Memphis, TN
     source: https://github.com/cameronbroe/cameronbroe-com
+  - url: https://lautarolobo.xyz
+    title: Lautaro Jordan Lobo Ravarotto - Web Developer | Computer Science Student
