--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ cache:
 install: "bin/setup"
 notifications:
   email: false
-script: "bundle exec middleman build --verbose"
+script: 'bundle exec middleman build --dependency-file="deps-cache/deps.yml" --track-dependencies --only-changed'
 sudo: false
