Netlify deploys from Actions

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -3,21 +3,30 @@ name: Ruby
 on:
   push:
     branches:
-    - master
+      - master
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Ruby 2.6
-      uses: actions/setup-ruby@v1
-      with:
-        ruby-version: 2.6.x
-    - name: Build and test with Rake
-      run: |
-        gem install bundler
-        bundle install --jobs 4 --retry 3
-        bundle exec middleman build --verbose
+      - uses: actions/checkout@v1
+      - name: Set up Ruby 2.6
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 2.6.x
+      - name: Build and test with Rake
+        run: |
+          gem install bundler
+          bundle install --jobs 4 --retry 3
+          bundle exec middleman build --verbose
+      - name: Use Node.js 10.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 10.x
+      - name: Setup netlify
+        run: |
+          npm install -g netlify-cli
+      - name: Deploy to netlify
+        run: |
+          netlify deploy --prod --message "Deploying from master" --auth ${{ secrets.NETLIFY_TOKEN }}
