Move site id into netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
+[Settings]
+  ID = "9ace54e5-ea18-4266-bd75-13b3ef3aa653"
+
+[build]
+  publish = "build"
+
 [[redirects]]
   from = "https://middlemanapp-dot-com.netlify.com/*"
   to = "https://middlemanapp.com/:splat"
