--- a/data/sites.yml
+++ b/data/sites.yml
@@ -576,3 +576,13 @@ blogs:
     source: https://gitlab.com/gitlab-com/www-gitlab-com
   - url: http://awebsitefromscratch.com
     title: A Website From Scratch - a blog about building the blog.
+  - url: https://cacheventures.com
+    title: Cache Ventures - We build, advise, and invest in awesome companies.
+  - url: https://blazeverify.com
+    title: Blaze Verify - Email Verification that’s astonishingly easy and low-cost.
+  - url: https://parsemedia.com
+    title: Parse Media - We craft strategic and optimized digital experiences from scratch.
+  - url: https://bookkeeper360.com
+    title: Bookkeeper360 - Accounting and advisory solutions tailored just for you.
+  - url: https://goldframemedia.com/
+    title: Gold Frame - Premium Photo Booth Solutions
