--- a/data/sites.yml
+++ b/data/sites.yml
@@ -588,3 +588,5 @@ blogs:
     title: Bookkeeper360 - Accounting and advisory solutions tailored just for you.
   - url: https://goldframemedia.com/
     title: Gold Frame - Premium Photo Booth Solutions
+  - url: https://www.endpoint.com/
+    title: End Point custom software development and consulting
