Adding https://docs.openproject.org
We are using Middleman to generate the docs at OpenProject.

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -590,3 +590,5 @@ blogs:
     title: Gold Frame - Premium Photo Booth Solutions
   - url: https://www.endpoint.com/
     title: End Point custom software development and consulting
+  - url: https://docs.openproject.org/
+    title: Docs for the open source project management software OpenProject
