update company domain

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -104,8 +104,8 @@ built:
   - url: http://www.modularscale.com
     title: "Modular Scale"
     source: https://github.com/modularscale/modularscale.com
-  - url: http://www.eventxtra.com
-    title: "EventXtra - Simple, Impactful, event last forever"
+  - url: https://eventx.io
+    title: "EventX - Virtual Event Platform"
   - url: http://flammlachs.de
     title: "Delicious fire broiled fish speciality"
   - url: http://filepicker.com
